--- a/src/asset/style/App.scss
+++ b/src/asset/style/App.scss
@@ -1,57 +1,70 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.layoutWrapperComponent{
-    .ant-layout-sider{
-        max-width: none !important;
-        min-width: none !important;
-        flex: 0 0 300px !important;
-        position: relative;
-    }
-    .sidebar_logo{
-        width: 100%;
-        margin: 32px 0px;
-        display: flex;
-        justify-content: center;
-        img{
-            width: 180px;
-            height: 180px;
-            object-fit: cover;
-        }
-    }
-    .sidebar_login-logout{
-        position: absolute;
-        display: flex;
-        align-items: center;
-        background-color: #1f1d30;
-        bottom: 0;
-        width: 100%;
-        padding: 16px 4px;
-        .user-infor{
-            display: flex;
-            align-items: center;
-            .avatar{
-                width: 40px;
-                height: 40px;
-                object-fit: cover;
-                margin-right: 16px;
-            }
-            .infor{
-                display: flex;
-                flex-direction: column;
-                color: white;
-            }
-        }
-        .logout-icon{
-            width: 100%;
-            display: flex;
-            justify-content: end;
-            align-items: center;
-            padding: 0px 16px;
-        }
-    }
+.layoutWrapperComponent {
+	.ant-layout-sider {
+		max-width: none !important;
+		min-width: none !important;
+		flex: 0 0 250px !important;
+		position: relative;
+	}
+	.sidebar_logo {
+		width: 100%;
+		margin: 32px 0px;
+		display: flex;
+		justify-content: center;
+		img {
+			width: 180px;
+			height: 180px;
+			object-fit: cover;
+		}
+	}
+	.sidebar_login-logout {
+		position: absolute;
+		display: flex;
+		align-items: center;
+		background-color: #1f1d30;
+		bottom: 0;
+		width: 100%;
+		padding: 16px 4px;
+		.user-infor {
+			display: flex;
+			align-items: center;
+			.avatar {
+				width: 40px;
+				height: 40px;
+				object-fit: cover;
+				margin-right: 16px;
+			}
+			.infor {
+				display: flex;
+				flex-direction: column;
+				color: white;
+			}
+		}
+		.logout-icon {
+			width: 100%;
+			display: flex;
+			justify-content: end;
+			align-items: center;
+			padding: 0px 16px;
+		}
+	}
+}
 
+.demo-editor.rdw-editor-main {
+	border: 1px solid #f1f1f1;
+	height: calc(100vh - 464px);
+	padding: 10px;
+}
+
+.public-DraftStyleDefault-block.public-DraftStyleDefault-ltr {
+	margin: 0;
+}
+
+.DraftEditor-root {
+	height: 100%;
 }
