--- a/src/asset/style/LayoutWrapper.scss
+++ b/src/asset/style/LayoutWrapper.scss
@@ -1,6 +1,7 @@
 .layout-user{
     .ant-layout-header{
         padding: 0;
+        background-color: #ffffff;
         .ant-menu{
             .ant-menu-item:last-child{
                 margin-left: 300px ;
