--- a/src/asset/style/Home.scss
+++ b/src/asset/style/Home.scss
@@ -19,4 +19,19 @@
             }
         }
     }
+
+    .feature-style{
+        width: 100%;
+        .feature-style-title{
+            font-size: 24px;
+            margin: 24px 0px;
+        }
+        .feature-style-item{
+            margin: 4px;
+            border-radius: unset;
+            img{
+                border-radius: unset;
+            }
+        }
+    }
 }
