--- a/src/asset/style/LayoutWrapper.scss
+++ b/src/asset/style/LayoutWrapper.scss
@@ -1,13 +1,15 @@
 .layout-user{
     .ant-layout-header{
+        width: 100%;
         padding: 0;
         background-color: #ffffff;
+        position: fixed;
+        z-index: 1000;
         .ant-menu{
             .ant-menu-item:last-child{
                 margin-left: 300px ;
                 color: red;
             }
         }
-        
     }
 }
