--- a/src/asset/style/ManageAccount.scss
+++ b/src/asset/style/ManageAccount.scss
@@ -11,6 +11,10 @@
         flex-direction: column;
         justify-content: center;
 
+        .table-content{
+            min-height: 300px;
+        }
+
         .table-pagination{
             display: flex;
             justify-content: center;
