--- a/src/asset/style/LayoutWrapper.scss
+++ b/src/asset/style/LayoutWrapper.scss
@@ -5,6 +5,8 @@
         background-color: #ffffff;
         position: fixed;
         z-index: 1000;
+        display: flex;
+        align-items: center !important;
         .ant-menu{
             .ant-menu-item:last-child{
                 margin-left: 300px ;
