--- a/src/asset/style/Cart.scss
+++ b/src/asset/style/Cart.scss
@@ -1,23 +1,112 @@
 .cart{
-    display: flex;
-    width: 100%;
-    padding: 0px 200px;
-    margin-bottom: 16px;
-
-    .bookImg{
-        width: 200px;
-        height: 200px;
-        object-fit: cover;
-        margin-right: 32px;
-        cursor: pointer;
-    }
-
-    .cart-right{
-        display: flex;
-        padding-top: 24px;
-        .bookDetailInfor{
-            width: 300px;
+    .cart-list{
+        margin-top: 40px;
+        .cart-item{
+            display: flex;
+            width: 100%;
+            padding: 0px 40px;
+            margin-bottom: 16px;
+            border: 1px solid gray;
+            .cart-left{
+                width: 25%;
+                .productImg{
+                    width: 120px;
+                    height: 120px;
+                    object-fit: cover;
+                    margin-right: 32px;
+                    cursor: pointer;
+                }
+            }
+        
+            .cart-mid{
+                width: 60%;
+                display: flex;
+                align-items: center;
+                span{
+                    width: 30%;
+                }
+                .quantity{
+                    width: 40%;
+                    display: flex;
+                    .quantity-minus{
+                        margin: 0;
+                        width: 40px;
+                    }
+                    .quantity-plus{
+                        margin-left: 30px;
+                        width: 40px;
+                    }
+                    .quantity-number{
+                        font-weight: 600;
+                    }
+                }
+            }
+            .cart-right{
+                width: 15%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
         }
     }
-
+    .cart-summary{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        margin-left: 16px;
+        margin-top: 40px;
+        .summary-header{
+            width: 100%;
+            height: 60px;
+            border: 1px solid gray;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 18px;
+            font-weight: 600;
+            background-color: #adafaa;
+        }
+        .summary-detail{
+            width: 100%;
+            .summary-detail-item{
+                width: 100%;
+                height: 40px;
+                display: flex;
+                align-items: center;
+                label{
+                    min-width: 80%;
+                    color: red;
+                    font-weight: 500;
+                    font-size: 14px;
+                }
+            }
+            .summary-total{
+                width: 100%;
+                height: 60px;
+                border: 1px solid gray;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 18px;
+                font-weight: 600;
+                background-color: #757575;
+                color: white;       
+            }
+        }
+        .summary-payment{
+            width: 100%;
+            height: 60px;
+            margin-top: 12px;
+            border: 1px solid gray;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 18px;
+            font-weight: 600;
+            background-color: #53945c;
+            color: white;
+        }
+    }
+    
 }
