--- a/src/asset/style/Cart.scss
+++ b/src/asset/style/Cart.scss
@@ -1,12 +1,16 @@
 .cart{
     .cart-list{
         margin-top: 40px;
+        height: 80%;
+        overflow-y: scroll;
         .cart-item{
             display: flex;
             width: 100%;
             padding: 0px 40px;
             margin-bottom: 16px;
-            border: 1px solid gray;
+            border: 1px solid rgb(216, 216, 216);
+            border-radius: 3px;
+            box-shadow: 0px 8px 8px rgba(102,102,102,0.5);
             .cart-left{
                 width: 25%;
                 .productImg{
@@ -59,13 +63,14 @@
         .summary-header{
             width: 100%;
             height: 60px;
-            border: 1px solid gray;
+            border: 1px solid rgb(216, 216, 216);
+            border-radius: 3px;
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 18px;
             font-weight: 600;
-            background-color: #adafaa;
+            background-color: #dfdfdf;
         }
         .summary-detail{
             width: 100%;
@@ -90,7 +95,9 @@
                 align-items: center;
                 font-size: 18px;
                 font-weight: 600;
-                background-color: #757575;
+                background-color: #dfdfdf;
+                border-radius: 3px;
+                border: 1px solid rgb(216, 216, 216);
                 color: white;       
             }
         }
@@ -98,14 +105,35 @@
             width: 100%;
             height: 60px;
             margin-top: 12px;
-            border: 1px solid gray;
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 18px;
             font-weight: 600;
+            border: 1px solid rgb(216, 216, 216);
             background-color: #53945c;
+            border-radius: 3px;
             color: white;
+            cursor: pointer;
+            div{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                button{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 100%;
+                    height: 100%;
+                    border: none;
+                    background-color: unset;
+                    color: white;
+                    cursor: pointer;
+                }
+            }
+
         }
     }
     
