--- a/src/asset/style/LayoutWrapper.scss
+++ b/src/asset/style/LayoutWrapper.scss
@@ -7,10 +7,28 @@
         z-index: 1000;
         display: flex;
         align-items: center !important;
-        .ant-menu{
-            .ant-menu-item:last-child{
-                margin-left: 300px ;
-                color: red;
+        .logo{
+
+        }
+        .header-menu{
+            display: flex;
+            width: 100%;
+            .menu-left{
+                width: 70%;
+                .ant-menu-overflow{
+                    width: 100%;
+                    .ant-menu-overflow-item{
+                        width: 15%;
+                    }
+                }
+            }
+            .menu-right{
+                width: 30%;
+                .ant-menu-overflow{
+                    width: 100%;
+                    display: flex;
+                    justify-content: right;
+                }
             }
         }
     }
