--- a/src/asset/style/Cart.scss
+++ b/src/asset/style/Cart.scss
@@ -74,67 +74,45 @@
         }
         .summary-detail{
             width: 100%;
+            margin-top: 8px;
             .summary-detail-item{
                 width: 100%;
                 height: 40px;
                 display: flex;
                 align-items: center;
                 label{
-                    min-width: 80%;
+                    min-width: 50%;
                     color: red;
                     font-weight: 500;
                     font-size: 14px;
                 }
+                span{
+                    font-size: 14px;
+                    font-weight: 600;
+                    color: red;
+                }
             }
-            .summary-total{
+        }
+
+        .form-payment{
+            margin-top: 16px;
+            .summary-payment{
                 width: 100%;
                 height: 60px;
-                border: 1px solid gray;
+                margin-top: 12px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 font-size: 18px;
                 font-weight: 600;
-                background-color: #dfdfdf;
+                background-color: #53945c;
                 border-radius: 3px;
-                border: 1px solid rgb(216, 216, 216);
-                color: white;       
+                color: white;
+                cursor: pointer;
+                border: none;
             }
         }
-        .summary-payment{
-            width: 100%;
-            height: 60px;
-            margin-top: 12px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 18px;
-            font-weight: 600;
-            border: 1px solid rgb(216, 216, 216);
-            background-color: #53945c;
-            border-radius: 3px;
-            color: white;
-            cursor: pointer;
-            div{
-                width: 100%;
-                height: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                button{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    width: 100%;
-                    height: 100%;
-                    border: none;
-                    background-color: unset;
-                    color: white;
-                    cursor: pointer;
-                }
-            }
-
-        }
+        
     }
     
 }
