--- a/src/asset/style/Cart.scss
+++ b/src/asset/style/Cart.scss
@@ -1,14 +1,13 @@
 .cart{
     .cart-list{
         margin-top: 40px;
-        height: 80%;
+        height: 800px;
         overflow-y: scroll;
         .cart-item{
             display: flex;
             width: 100%;
             padding: 0px 40px;
             margin-bottom: 16px;
-            border: 1px solid rgb(216, 216, 216);
             border-radius: 3px;
             box-shadow: 0px 8px 8px rgba(102,102,102,0.5);
             .cart-left{
@@ -53,6 +52,11 @@
             }
         }
     }
+    .cart-list::-webkit-scrollbar {
+        width: 0px;
+        background: transparent; 
+    }    
+
     .cart-summary{
         width: 100%;
         display: flex;
@@ -63,14 +67,14 @@
         .summary-header{
             width: 100%;
             height: 60px;
-            border: 1px solid rgb(216, 216, 216);
+            border: 1px solid rgb(253, 244, 244);
             border-radius: 3px;
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 18px;
             font-weight: 600;
-            background-color: #dfdfdf;
+            background-color: #f0f0f0;
         }
         .summary-detail{
             width: 100%;
