--- a/src/asset/style/DetailProduct.scss
+++ b/src/asset/style/DetailProduct.scss
@@ -1,9 +1,10 @@
 .detailProductUser{
     width: 100%;
     height: 100%;
-    padding: 40px 200px;
+    padding: 40px 300px;
     display: flex;
     flex-direction: column;
+
     .bookInfor{
         width: 100%;
         display: flex;
@@ -11,10 +12,12 @@
             width: 100%;
             height: 100%;
         }
-        .bookImg{
-            width: 100%;
-            height: 100%;
+        .img{
+            width: 500px;
+            height: 500px;
             object-fit: contain;
+            box-shadow: 0px 8px 8px rgba(207, 207, 207, 0.5);
+
         }
         .bookDetailInfor{
             width: 60%;
@@ -23,46 +26,41 @@
                 font-size: 36px;
             }
             .author{
-                font-size: 16px;
-                margin-top: 4px;
-                margin-bottom: 8px;
+                font-size: 20px;
+                margin: 4px 0px;
             }
-            .rate{
-                span{
-                    margin-right: 4px;
-                }
-                Button{
-                    margin-left: 8px;
-                }
+
+            .category{
+                font-size: 20px;
+                margin: 4px 0px;
+            }
+
+            .date{
+                font-size: 20px;
+                margin: 4px 0px;
             }
             .price{
-                font-size: 16px;
-                margin-top: 32px;
+                font-size: 20px;
+                margin-top: 24px;
             }
             .quantity{
                 display: flex;
                 align-items: center;
-                margin-top: 24px;
+                margin-top: 12px;
                 label{
-                    font-size: 16px;
+                    font-size: 20px;
                     margin-right: 16px;
                 }
                 .inputNumber{
-                    border-radius: 2px;
+                    border-radius: 15px;
                 }
             }
             .totalCost{
-                font-size: 16px;
-                margin-top: 24px;
-                font-weight: 500;
+                font-size: 20px;
+                margin-top: 12px;
+                font-weight: 600;
+                color: red;
             }
         }
     }
-    .bookComment{
-        margin-top: 24px;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-    
 }
