--- a/src/asset/style/Home.scss
+++ b/src/asset/style/Home.scss
@@ -5,13 +5,15 @@
     .banner{
 
     }
-    .trending{
+    .category{
         width: 100%;
-        .trending-title{
+        .category-title{
             font-size: 24px;
-            margin: 24px 0px;
+            margin-bottom: 24px;
+            margin-top: 120px;
+
         }
-        .trending-item{
+        .item{
             margin: 4px;
             border-radius: unset;
             img{
@@ -24,13 +26,56 @@
         width: 100%;
         .feature-style-title{
             font-size: 24px;
-            margin: 24px 0px;
+            margin-bottom: 24px;
         }
         .feature-style-item{
             margin: 4px;
             border-radius: unset;
             img{
                 border-radius: unset;
+            }
+        }
+    }
+    .page-header{
+        width: 100%;
+        height: 450px;
+        .page-header-title{
+            font-size: 24px;
+            color: #111111;
+            padding-top: 16px;
+            padding-left: 16px;
+            text-align: center;
+            margin-top: 24px;
+        }
+        .page-header-content{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            h1{
+                color: #111111;
+                font-size: 60px;
+                font-weight: 700;
+                width: 600px;
+                text-align: center;
+            }
+            span{
+                font-size: 24px;
+                margin-top: 28px;
+                color: #111111;
+            }
+            .join-us{
+                width: 120px;
+                height: 40px;
+                border-radius: 30px;
+                background-color: #111111;
+                color: #fff;
+                display: flex;
+                font-size: 16px;
+                justify-content: center;
+                align-items: center;
+                margin-top: 28px;
+                cursor: pointer;
             }
         }
     }
