--- a/src/asset/style/FilterComponent.scss
+++ b/src/asset/style/FilterComponent.scss
@@ -26,15 +26,14 @@
             font-size: 22px;
             font-weight: 600;
         }
-        .ant-checkbox-group{
-            margin-top: 8px;
             .ant-checkbox-wrapper{
                 margin: 0;
+                flex-direction: unset !important;
+                margin-top: 8px;
                 span{
                     font-size: 18px;
                     font-weight: 400;
                 }
             }
-        }
     }
 }
