--- a/src/asset/style/ManageAccount.scss
+++ b/src/asset/style/ManageAccount.scss
@@ -12,7 +12,7 @@
         justify-content: center;
 
         .table-content{
-            min-height: 300px;
+            height: 70vh;
             overflow-y: scroll;
             .ant-table{
                 .mark-down{
