--- a/src/asset/style/LayoutWrapper.scss
+++ b/src/asset/style/LayoutWrapper.scss
@@ -13,6 +13,7 @@
         .header-menu{
             display: flex;
             width: 100%;
+            background-color: #b38c8c !important;
             .menu-left{
                 width: 70%;
                 .ant-menu-overflow{
@@ -29,6 +30,9 @@
                     display: flex;
                     justify-content: right;
                 }
+            }
+            .ant-menu-overflow{
+                background-color: #fff6f6;
             }
         }
     }
