--- a/src/asset/style/News.scss
+++ b/src/asset/style/News.scss
@@ -42,8 +42,9 @@
             }
 
             p{
-                margin-top: 16px;
-                font-size: 14px;
+                font-size: 12px;
+                height: 32px;
+                overflow-y: hidden;
             }
         }
     }
